--- a/frontend/src/app/components/Generation/interview-prep/interview-prep.component.html
+++ b/frontend/src/app/components/Generation/interview-prep/interview-prep.component.html
@@ -211,4 +211,14 @@
                 (click)="closePlanDialog()"></button>
       </ng-template>
     </p-dialog>
+    <p-dialog 
+      header="{{ 'AI_CONFIG.MODAL_TITLE' | translate }}" 
+      [(visible)]="showAIConfigModal" 
+      [modal]="true"
+      [style]="{ width: '70vw', maxWidth: '900px' }">
+      
+      <app-ai-config-modal 
+        (closed)="showAIConfigModal = false">
+      </app-ai-config-modal>
+    </p-dialog>
   </div>
